# rust-cloud-monitor

./: Cargo.toml  Dockerfile  config.yaml  dashboard.json  docker-compose.yml  prometheus.yml  targets.json
src/: config.rs  main.rs  monitor.rs
src/routes/: targets.rs
