[package]
name = "rust-cloud-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
prometheus = "0.13"
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
env = "1.0.1"
serde_json = "1.0.145"
